fixed horizontal bar not taking full width on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ body {
 }
 
 #navbar-container {
-  width: 100%;
+  width: 200%;
   display: flex;
   align-items: center;
   flex-direction: column;
